--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,8 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:monospace 8
+font ttf-mononoki:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -27,6 +28,7 @@ font pango:monospace 8
 # font, it doesn’t scale on retina/hidpi displays.
 
 exec --no-startup-id feh --bg-scale ~/Documents/GhostInTheShellWallpaper.jpg
+exec --no-startup-id ~/.screenlayout/.Default.sh
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -41,7 +43,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec dmenu_run
 
 # start i3lock
-bindsym $mod+Shift+u exec i3lock
+bindsym $mod+u exec i3lock-fancy
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -121,6 +123,9 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+
+# kill everything
+bindsym $mod+Control+Shift+k focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, kill
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
