--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,11 +30,14 @@ font ttf-mononoki:monospace 8
 exec --no-startup-id feh --bg-scale ~/Documents/GhostInTheShellWallpaper.jpg
 exec --no-startup-id ~/.screenlayout/.Default.sh
 
+exec --no-startup-id ~/.config/locker.sh
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec xterm
 
 # kill focused window
 bindsym $mod+Shift+q kill
