--- a/dotfiles/config/kitty/kitty.conf
+++ b/dotfiles/config/kitty/kitty.conf
@@ -150,12 +150,10 @@ box_drawing_scale 0.001, 1, 1.5, 2
 #: }}}
 
 #: Cursor customization {{{
-
-cursor #cccccc
+# cursor #cccccc
 
 #: Default cursor color
-
-cursor_text_color #111111
+# cursor_text_color #111111
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -244,8 +242,7 @@ mouse_hide_wait 3.0
 #: typing text. Disabled by default on macOS as getting it to work
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
-
-url_color #0087bd
+# url_color #0087bd
 url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
@@ -474,17 +471,14 @@ placement_strategy center
 #: this option. Using a value of center means the cell area will be
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
-
-active_border_color #00ff00
+# active_border_color #00ff00
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
-
-inactive_border_color #cccccc
+# inactive_border_color #cccccc
 
 #: The color for the border of inactive windows
-
-bell_border_color #ff5a00
+# bell_border_color #ff5a00
 
 #: The color for the border of inactive windows in which a bell has
 #: occurred
@@ -605,17 +599,15 @@ active_tab_title_template none
 
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
-
-active_tab_foreground   #000
-active_tab_background   #eee
+# active_tab_foreground   #000
+# active_tab_background   #eee
 active_tab_font_style   bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
+# inactive_tab_foreground #444
+# inactive_tab_background #999
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
-
-tab_bar_background none
+# tab_bar_background none
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -732,49 +724,49 @@ tab_bar_background none
 #: 
 #: color7  #dddddd
 #: color15 #ffffff
-background #1e1f28
-foreground #f8f8f2
-cursor #bbbbbb
-selection_background #44475a
-color0 #000000
-color8 #545454
-color1 #ff5555
-color9 #ff5454
-color2 #50fa7b
-color10 #50fa7b
-color3 #f0fa8b
-color11 #f0fa8b
-color4 #bd92f8
-color12 #bd92f8
-color5 #ff78c5
-color13 #ff78c5
-color6 #8ae9fc
-color14 #8ae9fc
-color7 #bbbbbb
-color15 #ffffff
-selection_foreground #1e1f28
-
-mark1_foreground black
-
-#: Color for marks of type 1
-
-mark1_background #98d3cb
-
-#: Color for marks of type 1 (light steel blue)
-
-mark2_foreground black
-
-#: Color for marks of type 2
-
-mark2_background #f2dcd3
-
-#: Color for marks of type 1 (beige)
-
-mark3_foreground black
-
-#: Color for marks of type 3
-
-mark3_background #f274bc
+# background #1e1f28
+# foreground #f8f8f2
+# cursor #bbbbbb
+# selection_background #44475a
+# color0 #000000
+# color8 #545454
+# color1 #ff5555
+# color9 #ff5454
+# color2 #50fa7b
+# color10 #50fa7b
+# color3 #f0fa8b
+# color11 #f0fa8b
+# color4 #bd92f8
+# color12 #bd92f8
+# color5 #ff78c5
+# color13 #ff78c5
+# color6 #8ae9fc
+# color14 #8ae9fc
+# color7 #bbbbbb
+# color15 #ffffff
+# selection_foreground #1e1f28
+# 
+# mark1_foreground black
+# 
+# #: Color for marks of type 1
+# 
+# mark1_background #98d3cb
+# 
+# #: Color for marks of type 1 (light steel blue)
+# 
+# mark2_foreground black
+# 
+# #: Color for marks of type 2
+# 
+# mark2_background #f2dcd3
+# 
+# #: Color for marks of type 1 (beige)
+# 
+# mark3_foreground black
+# 
+# #: Color for marks of type 3
+# 
+# mark3_background #f274bc
 
 #: Color for marks of type 1 (violet)
 
@@ -898,8 +890,7 @@ term xterm-kitty
 #: }}}
 
 #: OS specific tweaks {{{
-
-macos_titlebar_color system
+# macos_titlebar_color system
 
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, a value of
@@ -1329,3 +1320,9 @@ map kitty_mod+delete clear_terminal reset active
 #: }}}
 
 # }}}
+
+
+# BEGIN_KITTY_THEME
+# kanagawabones
+include current-theme.conf
+# END_KITTY_THEME
